adjustable log file

--- a/.env.template
+++ b/.env.template
@@ -2,3 +2,5 @@ INFLUX_TOKEN="TOKEN"
 INFLUX_HOST="https://YOUR_HOST.influxdata.com"
 INFLUX_BUCKET="YOUR_BUCKET_NAME"
 INFLUX_ORGANIZATION="YOUR_ORG_NAME"
+LOG_LEVEL=debug
+LOG_FILE=sniff.log
