--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,3 @@
-INFLUX_TOKEN="TOKEN"
-INFLUX_HOST="https://YOUR_HOST.influxdata.com"
-INFLUX_BUCKET="YOUR_BUCKET_NAME"
-INFLUX_ORGANIZATION="YOUR_ORG_NAME"
+INFLUX_URL=...
 LOG_LEVEL=debug
 LOG_FILE=sniff.log
